# CrossPlatform3DLearning

./: .gitignore  LICENSE  README.md  developer.txt
Assets/: README  README~  Terrain.blend  UnspecifiedAnimal.blend  UnspecifiedAnimalWithTexture.blend  bug.blend  goat.blend  tree.blend
Assets/Tank/: Tank.blend  Tank.blend1  TankMultires.blend  TankMultires.blend1  TankMultiresMaterial.blend
Docs/: developer.txt
Docs/SourceCodeDoc/html/: annotated.html  classDoxygenTestClass-members.html  classDoxygenTestClass.html  classes.html  functions.html  functions_func.html  index.html
Docs/SourceCodeDoc/html/search/: all_64.js  classes_64.js  functions_64.js  search.js
Game/Data/Bug/: bugAnim_000002.mtl
Game/Data/Goat/: Goat.mtl  goatAnim_000012.mtl
Game/Data/OtherTextures/: Thumbs.db
Game/Data/Tree/: tree.mtl
Game/Data/UnspecifiedAnimal/: UnspecifiedAnimalWithNormals.mtl  UnspecifiedAnimalWithTexture.mtl  simpleShape.mtl
Game/Shaders/: .textureShader.frag.swp  perspectiveMatrixLightedShader.vert  perspectiveMatrixShader.vert  perspectiveShader.vert  testShader.frag  testShader.vert  textureShader.frag
Game/Shaders/OpenGL21/: perspectiveMatrixLightedShader.vert  textShader.frag  textureShader.frag
Game/Shaders/OpenGL33/: perspectiveMatrixLightedShader.vert  simpleShader.frag  textureShader.frag
Source/: BoundingBoxes.cpp  BoundingBoxes.h  CMakeLists.old  CMakeLists.txt  Character.cpp  Character.h  Configuration.cpp  Configuration.h  GameCharacter.cpp  GameCharacter.h  GameException.cpp  GameException.h  GameLog.cpp  GameLog.h  GameLogic.cpp  GameLogic.h  GameMath.cpp  GameMath.h  GameScene.cpp  GameScene.h  GetTokens.cpp  GetTokens.h  Image.cpp  Image.h  KeyInput.h  MathMacros.h  Model.cpp  Model.h  PlayerView.cpp  PlayerView.h  Renderer.cpp  Renderer.h  RendererOpenGL14.cpp  RendererOpenGL14.h  RendererOpenGL21.cpp  RendererOpenGL21.h  RendererOpenGL33.cpp  RendererOpenGL33.h  WorldObject.cpp  WorldObject.h  (+6 more)
Source/Game/: CMakeLists.txt  doxygen.cfg  game.cbp  game.depend  main.cpp
Source/UnitTesting/: CMakeLists.txt  boundingBoxesTest.cpp  configurationTest.cpp  gameLogDebugTest.cpp  gameLogTest.cpp  globalFixture.cpp  globals.h  imageTest.cpp  main.cpp  mainTest.cpp  modelTest.cpp  rendererTest.cpp  unitTesting.cbp  unitTesting.depend
Source/UnitTesting/Game/: game.sln
