CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(game)

FIND_PACKAGE(SDL REQUIRED)

IF(NOT SDL_FOUND)
	MESSAGE(FATAL ERROR "SDL not found!")
ENDIF(NOT SDL_FOUND)

INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})

LINK_LIBRARIES(${SDL_LIBRARY})

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenGL_LIBRARY_DIRS})
ADD_DEFINITIONS(${OpenGL_DEFINITIONS})
IF(NOT OPENGL_FOUND)
    MESSAGE(ERROR " OPENGL not found!")
ENDIF(NOT OPENGL_FOUND)

ADD_EXECUTABLE(game main.cpp)

TARGET_LINK_LIBRARIES(game ${OPENGL_LIBRARIES}) 
